--- a/packages/tools/docusaurus/docs/guides/create/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/index.mdx
@@ -18,7 +18,7 @@ And if following such a long guide (it's quite comprehensive) seems daunting, we
 
 Just keep this page in mind as a great overview and intro point into **kickstartDS** in general!
 
-The main steps will go as follows:
+The main steps involved go as follows:
 
 1. [Start your Design System](./start.mdx)
 2. [Design Application](./design.mdx)
@@ -26,7 +26,17 @@ The main steps will go as follows:
 4. [Add Components](./components.mdx)
 5. [Publish your Design System](./publish.mdx)
 
-As said previously, the resulting Design System will obviously not be finished by the end of this guide, but you'll have everything set up to start on the real work. We'll add links along the way, when it makes sense, calling out concepts in play or processes to use to find and refine your own personalized use (stuff like choosing an initial component set for your Design System).
+The resulting Design System will obviously not be finished by the end of this guide, but you'll have everything set up to start on the real work. We'll add links along the way when it makes sense, calling out concepts at play, or processes to use, to find and refine your own personalized worfklow with **kickstartDS**, and ultimately your own Design System (stuff like choosing an initial component set for your Design System).
+
+We also recommend having a look over at our guide for the ["Design System Initiative"](../design-system-initiative.md), which concerns itself with questions like:
+
+- What actually **is** my Design System?
+- Which components do I **really** need?
+- How could I **find out**, which components I'll need?
+- Who should be **involved** in that endeavour?
+- How to choose a good **place to start**?
+
+This will not be strictly needed for this guide, though. So feel free to just continue on!
 
 ## 1. Start your Design System
 
@@ -43,10 +53,28 @@ A rough outline:
 - [Result](./start.mdx#result)
 - [Next Step](./start.mdx#next-step)
 
+See the result of this step in the **Code Sandbox** below. It's showing specifically the result after this step. You can also view this on **Github** directly in [the `ds-guide` repository](https://github.com/kickstartDS/ds-guide), there's a branch for every step... and we're currently on [the branch `step/1`](https://github.com/kickstartDS/ds-guide/tree/step/1) in the guide:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F1/?fontsize=14&hidenavigation=1&module=%2Fpackage.json&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/1?file=/package.json).
+
 ## 2. Design Application
 
-We will create your initial Design Token set by applying your corporate design, as a reduced set of `Branding Token`.<br/>
-We'll then fine-tune this, as much as sensibly possible in such a guide, at least. We also compile a first semantic **Design Token** set with our **Style Dictionary**.
+We will create your initial Design Token set by applying your corporate design, as a reduced set of [**Branding Token**](../../foundations/token/branding-token.mdx).<br/>
+We'll then fine-tune this, at least as much as sensibly possible in such a guide. We also compile a first semantic [**Design Token**](../../foundations/token/design-token/index.md) set with our newly created **Style Dictionary**.
 
 Start: [Go to step 2](./design.mdx)
 
@@ -64,9 +92,27 @@ A rough outline:
 - [Result](./design.mdx#result)
 - [Next Step](./design.mdx#next-step)
 
+See the result of this step in the **Code Sandbox** below. It's showing specifically the result after this step. You can also view this on **Github** directly in [the `ds-guide` repository](https://github.com/kickstartDS/ds-guide), there's a branch for every step... and we're currently on [the branch `step/2`](https://github.com/kickstartDS/ds-guide/tree/step/2) in the guide:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F2/?fontsize=14&hidenavigation=1&module=%2Fpackage.json&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/2?file=/package.json).
+
 ## 3. Configure Storybook
 
-We add **Storybook** here, which includes installing and configuring all the addons we suggest to use. This also includes some we've written ourselves, to really get the most out of **kickstartDS**. We'll also add those, and add integrations with **kickstartDS** (tokens, icons, etc). You will end with a fully configured **Storybook**.
+We add **Storybook** here, which includes installing and configuring all the addons we suggest to use. This also includes some we've written ourselves, to really get the most out of **kickstartDS**. We'll also add those, and add integration with **kickstartDS** (tokens, icons, etc). You will end with a fully configured **Storybook**.
 
 Start: [Go to step 3](./storybook.mdx)
 
@@ -90,9 +136,27 @@ A rough outline:
 - [Result](./storybook.mdx#result)
 - [Next Step](./storybook.mdx#next-step)
 
+See the result of this step in the **Code Sandbox** below. It's showing specifically the result after this step. You can also view this on **Github** directly in [the `ds-guide` repository](https://github.com/kickstartDS/ds-guide), there's a branch for every step... and we're currently on [the branch `step/3`](https://github.com/kickstartDS/ds-guide/tree/step/3) in the guide:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F3/?fontsize=14&hidenavigation=1&module=%2Fpackage.json&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/3?file=/package.json).
+
 ## 4. Add Components
 
-In this part we'll add 4 exemplary components to illustrate the 4 main ways of adding a component to **kickstartDS**. A `Button` to show [adaptation](../components/adapt.mdx), a `Headline` to show [customization](../components/customize.mdx), a `TeaserCard` to show [creation](../components/create.mdx), and finally `Section` for [extension](../components/extend.mdx).
+In this part we'll add 4 exemplary components to illustrate the 4 main ways of adding a component to **kickstartDS**. A `Button` to show [adaptation](../components/adapt.mdx), a `Headline` to show [customization](../components/customize.mdx), a `TeaserCard` to show [creation](../components/create.mdx), and finally a `Section` for [extension](../components/extend.mdx).
 
 We'll then add a recipe, demonstrating that concept, combining those 4 components into one big article teaser component! This should hopefully equip you with all the weapons needed to start creating your very own components! We'd love to hear how it went!
 
@@ -111,6 +175,24 @@ A rough outline:
 - [Adding an article teaser recipe](./components.mdx#adding-an-article-teaser-recipe)
 - [Result](./components.mdx#result)
 - [Next Step](./components.mdx#next-step)
+
+See the result of this step in the **Code Sandbox** below. It's showing specifically the result after this step. You can also view this on **Github** directly in [the `ds-guide` repository](https://github.com/kickstartDS/ds-guide), there's a branch for every step... and we're currently on [the branch `step/4`](https://github.com/kickstartDS/ds-guide/tree/step/4) in the guide:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F4/?fontsize=14&hidenavigation=1&module=%2Fpackage.json&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/4?file=/package.json).
 
 ## 5. Publish your Design System
 
