--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -39,10 +39,10 @@ Let's have a look at our `package.json`, after having added **Storybook**:
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -86,10 +86,10 @@ It also includes **Storybook**s Essential addon, adding recommended addons by de
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -134,10 +134,10 @@ Next to the dependencies, two `scripts` entries were added by the **Storybook** 
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -524,9 +524,9 @@ ______________/\\\\\\\\\__/\\\______________/\\\\\\\\\\\_______
        __/\\\____\////\\\\\\\\\_\/\\\\\\\\\\\\\\\__/\\\\\\\\\\\__/\\\_
         _\///________\/////////__\///////////////__\///////////__\///__
 
-Version: 0.2.39
+Version: 1.0.0
 For more information visit:
-https://www.kickstartDS.com/cli
+https://www.kickstartDS.com/docs/intro/cli
 
 Starting...
 [kickstartDS: general] [info]: welcome to the kickstartDS CLI
@@ -578,9 +578,9 @@ ______________/\\\\\\\\\__/\\\______________/\\\\\\\\\\\_______
        __/\\\____\////\\\\\\\\\_\/\\\\\\\\\\\\\\\__/\\\\\\\\\\\__/\\\_
         _\///________\/////////__\///////////////__\///////////__\///__
 
-Version: 0.2.39
+Version: 1.0.0
 For more information visit:
-https://www.kickstartDS.com/cli
+https://www.kickstartDS.com/docs/intro/cli
 
 Starting...
 [kickstartDS: general] [info]: welcome to the kickstartDS CLI
@@ -633,9 +633,9 @@ ______________/\\\\\\\\\__/\\\______________/\\\\\\\\\\\_______
        __/\\\____\////\\\\\\\\\_\/\\\\\\\\\\\\\\\__/\\\\\\\\\\\__/\\\_
         _\///________\/////////__\///////////////__\///////////__\///__
 
-Version: 0.2.39
+Version: 1.0.0
 For more information visit:
-https://www.kickstartDS.com/cli
+https://www.kickstartDS.com/docs/intro/cli
 
 Starting...
 [kickstartDS: general] [info]: welcome to the kickstartDS CLI
@@ -723,10 +723,10 @@ A single entry in `devDependencies` should've been added.
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -773,10 +773,10 @@ To keep some order in our `scripts` entries, we re-order them to be sorted alpha
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -820,10 +820,10 @@ We add a script entry called `sass-manager`, which when called will compile our 
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -868,10 +868,10 @@ And while we're at it, we'll also add a watch task that can be used in developme
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -1065,9 +1065,9 @@ ______________/\\\\\\\\\__/\\\______________/\\\\\\\\\\\_______
        __/\\\____\////\\\\\\\\\_\/\\\\\\\\\\\\\\\__/\\\\\\\\\\\__/\\\_
         _\///________\/////////__\///////////////__\///////////__\///__
 
-Version: 0.2.39
+Version: 1.0.0
 For more information visit:
-https://www.kickstartDS.com/cli
+https://www.kickstartDS.com/docs/intro/cli
 
 Starting...
 [kickstartDS: general] [info]: welcome to the kickstartDS CLI
@@ -1151,6 +1151,12 @@ export const light = create({
 
 We [import the `create` function](focus://1) from **Storybook** [and our token](focus://2). With those we create a new theme, [with `light` as the `base`](focus://5). We won't go into detail about[ the specific token applications](focus://7:33) now, but feel free to adjust [`brandTitle` and `brandUrl`](focus://35:36) to your liking! [`brandImage`](focus://37) will be added next...
 </CH.Section>
+
+Create a folder `static` on your project root now:
+
+```bash
+mkdir -p static
+```
 
 For this to work, we add our logo to the `static/` directory created before, as `logo.svg`. If you don't have a fitting logo laying around now, feel free to [just use ours (right click > save as)](https://www.kickstartds.com/logo.svg).
 
@@ -1551,9 +1557,9 @@ ______________/\\\\\\\\\__/\\\______________/\\\\\\\\\\\_______
        __/\\\____\////\\\\\\\\\_\/\\\\\\\\\\\\\\\__/\\\\\\\\\\\__/\\\_
         _\///________\/////////__\///////////////__\///////////__\///__
 
-Version: 0.2.39
+Version: 1.0.0
 For more information visit:
-https://www.kickstartDS.com/cli
+https://www.kickstartDS.com/docs/intro/cli
 
 Starting...
 [kickstartDS: general] [info]: welcome to the kickstartDS CLI
@@ -1751,6 +1757,10 @@ module.exports = {
 }
 ```
 
+<Admonition type="tip" title="Fork of @whitespace/storybook-addon-html">
+  We deactivate `@kickstartds/storybook-addon-jsonschema` for now, because there's a bug that needs to be fixed to make it compatible with the Open Source `2.0.0` release of **kickstartDS**. You can follow the progress for this on the following ticket: [kickstartDS/storybook-addon-jsonschema/issues/19](https://github.com/kickstartDS/storybook-addon-jsonschema/issues/19)
+</Admonition>
+
 ## Review changes
 
 Let us review our `package.json` again now, it's starting to grow already:
@@ -1775,10 +1785,10 @@ Let us review our `package.json` again now, it's starting to grow already:
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -1827,10 +1837,10 @@ We use [`@whitespace/storybook-addon-html`](https://storybook.js.org/addons/@whi
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -1880,10 +1890,10 @@ For **Design Token** documentation we use [`storybook-design-token`](https://sto
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -1934,10 +1944,10 @@ Read more about it on our [dedicated integration page](../../integration/storybo
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -1988,10 +1998,10 @@ Read more about it on our [dedicated integration page](../../integration/storybo
   "author": "Jonas Ulrich",
   "license": "MIT",
   "dependencies": {
-    "@kickstartds/base": "2.0.0-canary.922.4908.0",
-    "kickstartds": "0.2.39",
-    "react": "17",
-    "react-dom": "17"
+    "@kickstartds/base": "^2.0.2",
+    "kickstartds": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -2016,12 +2026,30 @@ Read more about it on our [dedicated integration page](../../integration/storybo
 </CH.Code>
 </CH.Spotlight>
 
-With that, we've successfully added **Storybook** to our Design System, integrated it with our **Design Token** / **Style Dictionary**, adopted some concepts of **kickstartDS**, and even added a bit of theming!
-
 ## Result
 
-We have our main setup running now, including **Storybook**. Everything is prepared!
+With that, we've successfully added **Storybook** to our Design System, integrated it with our **Design Token** / **Style Dictionary**, adopted some concepts of **kickstartDS**, and even added a bit of theming! We have our main setup running now, including **Storybook**.
 
 ## Next Step
 
 It's time to get to the exciting part... adding components to our Design System. To learn about the different ways you can go about in that, follow our next section!
+
+## Code Sandbox
+
+See the result of this step in the **Code Sandbox** below. It's showing specifically the result after this step. You can also view this on **Github** directly in [the `ds-guide` repository](https://github.com/kickstartDS/ds-guide), there's a branch for every step... and we're currently on [the branch `step/3`](https://github.com/kickstartDS/ds-guide/tree/step/3) in the guide:
+
+<iframe
+  src="https://codesandbox.io/embed/github/kickstartDS/ds-guide/tree/step%2F3/?fontsize=14&hidenavigation=1&module=%2Fpackage.json&theme=dark&view=editor"
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
+  title="ds-guide"
+  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
+
+Toggle the file browser with the hamburger icon at the top left, [or open it directly in your browser](https://codesandbox.io/s/github/kickstartDS/ds-guide/tree/step/3?file=/package.json).
